--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test"
   },
-  "homepage": "https://iborymagic.github.io/a11y-airline",
+  "homepage": ".",
   "eslintConfig": {
     "extends": [
       "react-app",
