--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "a11y-airline",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://365kim.github.io/a11y-airline",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
