--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.3.0",
     "webpack": "^5.55.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
