--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "scripts": {
     "lint": "eslint --fix --cache **/*.js",
     "format": "prettier --write --ignore-unknown .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy": "NODE_DEBUG=gh-pages gh-pages --dist src -f"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
+    "gh-pages": "^3.2.3",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "2.3.1"
