--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "a11y-airline",
+  "homepage": "https://sunyoungkwon.github.io/a11y-airline/",
   "version": "0.1.0",
+  "author": {
+    "name": "SunYoungKwon",
+    "email": "sunnyk5780@gmail.com",
+    "url": "https://github.com/SunYoungKwon"
+  },
   "private": true,
   "dependencies": {
     "@types/node": "^12.0.0",
@@ -15,7 +21,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
