--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "eslintConfig": {
     "extends": [
