--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
   "version": "0.1.0",
   "homepage": "https://365kim.github.io/a11y-airline",
   "dependencies": {
-    "gh-pages": "^3.2.3",
+    "classnames": "^2.3.1",
+    "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
