--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.1.2",
+    "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "next start",
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": [
