fix: broswerslit 추가

--- a/package.json
+++ b/package.json
@@ -28,5 +28,17 @@
   },
   "devDependencies": {
     "eslint-plugin-jsx-a11y": "^6.4.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
