--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "a11y-airline",
   "version": "0.1.0",
   "description": "우아한테크코스 웹접근성 미션",
-  "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack build"
+    "build": "webpack build",
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -16,9 +17,10 @@
   "bugs": {
     "url": "https://github.com/uk960214/a11y-airline/issues"
   },
-  "homepage": "https://github.com/uk960214/a11y-airline#readme",
+  "homepage": "https://uk960214.github.com/a11y-airline#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
