--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
   "name": "a11y-airline",
-  "version": "1.0.0",
-  "description": "<p align=\"middle\" >   <img width=\"100px;\" src=\"./src/images/airplane.png\"/> </p> <h2 align=\"middle\">누구나 접근할 수 있는 항공사 웹사이트</h2> <p align=\"middle\">항공사 웹사이트 컴포넌트의 스크린 리더 접근성 높이기</p> <p align=\"middle\">   <img src=\"https://img.shields.io/badge/version-1.0.0-blue?style=flat-square\" alt=\"template version\"/>   <img src=\"https://img.shields.io/badge/language-html-red.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/language-css-blue.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/language-js-yellow.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/license-MIT-brightgreen.svg?style=flat-square\"/> </p>",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "미션: 항공사 웹사이트 컴포넌트의 접근성 높이기",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production",
     "build:refresh": "rm -rf build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lokba/a11y-airline.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lokba/a11y-airline/issues"
-  },
-  "homepage": "https://github.com/lokba/a11y-airline#readme",
   "devDependencies": {
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
@@ -43,5 +32,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lokba/a11y-airline.git"
+  },
+  "keywords": [
+    "accessibility",
+    "aria"
+  ],
+  "author": {
+    "name": "Kim Sang Lok",
+    "email": "evertree6031@gmail.com"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lokba/a11y-airline/issues"
+  },
+  "homepage": "https://github.com/lokba/a11y-airline#readme"
 }
