--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<p align=\"middle\" >   <img width=\"100px;\" src=\"./src/images/airplane.png\"/> </p> <h2 align=\"middle\">누구나 접근할 수 있는 항공사 웹사이트</h2> <p align=\"middle\">항공사 웹사이트 컴포넌트의 스크린 리더 접근성 높이기</p> <p align=\"middle\">   <img src=\"https://img.shields.io/badge/version-1.0.0-blue?style=flat-square\" alt=\"template version\"/>   <img src=\"https://img.shields.io/badge/language-html-red.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/language-css-blue.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/language-js-yellow.svg?style=flat-square\"/>   <img src=\"https://img.shields.io/badge/license-MIT-brightgreen.svg?style=flat-square\"/> </p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "webpack serve --mode development",
+    "start:prod": "webpack serve --mode production",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,12 @@
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.8.4"
+    "esbuild-loader": "^2.20.0",
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "react": "^18.2.0",
