chore: styled-components 설치
- tsconfig.json에 moduleResolution 옵션 node 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ES6",
     "lib": ["DOM", "ESNext"],
     "isolatedModules": true,
+    "moduleResolution": "node",
     "jsx": "react-jsx"
   },
   "include": ["src"]
