--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "^2.7.1",
