--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
