--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "a11y-airline",
+  "homepage": "https://usageness.github.io/a11y-airline",
   "version": "0.0.1",
   "description": "누구나 접근할 수 있는 항공사 웹사이트",
   "main": "index.ts",
@@ -9,7 +10,8 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -b gh-pages -d dist --remote me"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
