refactor: Error 처리 로직을 유틸화 한다.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
+      "@utils": ["src/utils/index.ts"],
       "@assets/*": ["assets/*"]
     }
   },
