--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.config.js --open --hot",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,8 +17,9 @@
   "bugs": {
     "url": "https://github.com/prefer2/a11y-airline/issues"
   },
-  "homepage": "https://github.com/prefer2/a11y-airline#readme",
+  "homepage": "https://github.com/prefer2/a11y-airline",
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
