--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true /* Enable all strict type-checking options. */,
     // "skipLibCheck": true /* Skip type checking all .d.ts files. */
-    "declaration": true
+    "declaration": true,
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"]
+    }
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Projects */
