chore: gh-pages 배포 설정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "a11y-airline",
+  "homepage": "https://soyi47.github.io/a11y-airline",
+  "description": "<우아한테크코스 4기 프론트엔드> level 4 - 웹 접근성",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +12,7 @@
     "@types/node": "^16.11.63",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
