--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "webpack serve --open --config webpack.config.js",
-		"build": "webpack"
+		"build": "webpack",
+		"deploy": "gh-pages -d dist"
 	},
 	"repository": {
 		"type": "git",
@@ -48,6 +49,7 @@
 		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0",
-		"webpack-dev-server": "^4.11.1"
+		"webpack-dev-server": "^4.11.1",
+		"gh-pages": "^4.0.0"
 	}
 }
