--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
 	"version": "0.0.1",
 	"description": "웹 접근성 미션",
 	"main": "index.tsx",
+	"homepage": "https://liswktjs.github.io/a11y-airline/",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "webpack serve --open --config webpack.config.js",
 		"build": "webpack",
+		"predepoly": "npm run build",
 		"deploy": "gh-pages -d dist"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/liswktjs/a11y-airline.git"
 	},
 	"author": "sally",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/liswktjs/a11y-airline/issues"
 	},
-	"homepage": "https://github.com/liswktjs/a11y-airline",
 	"dependencies": {
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
