refactor: 불필요한 스크립트 커맨드 삭제

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.tsx",
   "scripts": {
     "start": "webpack serve --open --mode=development",
-    "build": "webpack --mode=production",
-    "build:refresh": "rm -rf build"
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
