--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "styled-components": "^5.3.6"
   }
 }
