--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Yunho <ansghkdbsgh@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "build": "webpack --mode=production",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/node": "^18.8.2",
@@ -19,7 +21,8 @@
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "gh-pages": "^4.0.0"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
@@ -27,5 +30,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.6"
-  }
+  },
+  "homepage": "https://kangyunho1221.github.io/a11y-airline/"
 }
