--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config ./webpack/webpack.dev.js",
     "build": "webpack --progress --config ./webpack/webpack.prod.js",
-    "predeploy": "yarn build",
+    "predeploy": "yarn build && cp ./public/CNAME ./build",
     "deploy": "gh-pages -d build"
   },
   "repository": {
