chore: 빌드 속도 개선
  - transpile only 옵션 적용
  - ForkTsCheckerWebpackPlugin 으로 타입 체크 적용

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "webpack",
     "start": "webpack serve",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -b gh-pages -d dist --remote me"
+    "deploy": "gh-pages -d dist --remote me",
+    "help": "gh-pages -h"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
