--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.6"
   },
-  "homepage": "https://kangyunho1221.github.io/a11y-airline/"
+  "homepage": "."
 }
