chore: tsconfig target 설정 변경
- esbuild-loader 사용으로 target 옵션이 트랜스파일링에 영향을 주지 않으므로 target을 최신 버전으로 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "target": "ES6",
+    "target": "ESNext",
     "strict": true,
     "module": "ES6",
-    "lib": ["DOM", "ESNext"],
     "isolatedModules": true,
     "moduleResolution": "node",
     "jsx": "react-jsx"
