--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "우아한테크코스 접근성 미션",
   "scripts": {
-    "test": "test",
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,18 +20,17 @@
   "bugs": {
     "url": "https://github.com/JUDONGHYEOK/a11y-airline/issues"
   },
-  "homepage": "https://github.com/JUDONGHYEOK/a11y-airline#readme",
+  "homepage": "https://github.com/JUDONGHYEOK/a11y-airline",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^4.11.1",
     "typescript": "^4.8.4"
   }
 }
