--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.38.1",
 		"babel-loader": "^8.2.5",
+		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.7.1",
 		"eslint": "^8.24.0",
 		"eslint-plugin-react": "^7.31.8",
+		"gh-pages": "^4.0.0",
 		"html-webpack-plugin": "^5.5.0",
 		"prettier": "^2.7.1",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.8.4",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0",
-		"webpack-dev-server": "^4.11.1",
-		"gh-pages": "^4.0.0"
+		"webpack-dev-server": "^4.11.1"
 	}
 }
