chore: TS 에서 jpeg 확장자를 읽을 수 있도록 설정한다.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@assets/*": ["assets/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "assets", "src/global.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
