build : netlify 배포 홈페이지 수정

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a11y-airline",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://DomMorello.github.io/a11y-airline",
+  "homepage": "https://cheerful-dodol-465801.netlify.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
