--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
