--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,10 @@
 			{
 				"source": "/inserting-passenger",
 				"destination": "/index.html"
+			},
+			{
+				"source": "/carousel-travel",
+				"destination": "/index.html"
 			}
 		]
 	}
