chore: tsconfig.json 설정 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "esnext",
     "strict": true,
     "noImplicitAny": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "outDir": "dist"
   },
